<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/streamServer"
        android:gravity="center">

        <ImageView
            android:id="@+id/streamServerIco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp" />

        <TextView
            android:id="@+id/streamServerTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/streaming_server_mode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/limitSpeed"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/limitSpeedIco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/limit_download_speed" />

        <TextView
            android:id="@+id/limitSpeedTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limit_download_speed" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scheduleDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/scheduleIco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/schedule_download" />

        <TextView
            android:id="@+id/scheduleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_download" />
    </LinearLayout>

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/share"
        android:drawablePadding="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center|start"
        android:text="@string/share_download_data"
        android:textColor="#000" />
</LinearLayout>