<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".activities.SimpleActivity">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/forward">

        <LinearLayout
            android:id="@+id/questions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="10dp" />
    </ScrollView>

    <ImageView
        android:id="@+id/exit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/exit"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="exit"
        android:src="@drawable/cross" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/go_to_first_options"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/forward"
        android:padding="10dp"
        android:onClick="home"
        android:src="@drawable/home" />

    <ImageView
        android:id="@+id/forward"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/forward"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:onClick="forward"
        android:src="@drawable/forward"
        android:visibility="invisible" />
</RelativeLayout>