<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".activities.IntroActivity">

    <ImageView
        android:id="@+id/ico"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Get started"
        android:textColor="@color/colorAccent_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/permissionLayout"
            android:layout_marginTop="15dp"
            android:gravity="center|start"
            android:onClick="requestPermissions"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/permissionChk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_permission_text"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HTTP-Downloader requires to access your storage to download files to it" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:onClick="changeDownloadFolder">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/folder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_download_folder"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/folderName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/choose_default_folder" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/continueBtn"
        android:background="@drawable/round_blue"
        android:padding="9dp"
        android:onClick="proceed"
        android:text="Continue"
        android:textColor="#fff" />
</LinearLayout>